Implementación del login de parte del frontend

--- a/src/app/pages/home/inicio/inicio.component.html
+++ b/src/app/pages/home/inicio/inicio.component.html
@@ -1,13 +1,11 @@
 <div id="main-wrapper">
-  <app-header-front></app-header-front>
-  <app-sidebar-front></app-sidebar-front>
+  <app-header></app-header>
+  <app-sidebar></app-sidebar>
   <app-modal></app-modal>
 
-  <div class="page-wrapper">
-      <div class="container">
-        <h1>Hola</h1>
-      </div>
+  <div class="container-fluid">
+    <h1>Hola</h1>
   </div>
 
-  <app-footer-front></app-footer-front>
+  <app-footer></app-footer>
 </div>
