--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,27 +1,38 @@
-<div class="row">
-  <div class="col p-3 separador-vertical altura">
-    <h1 class="texto-azul text-center">Usuarios <b>Registrados</b></h1>
-    <p class="justify">Si aún no eres usuario o tienes dificultades para acceder por falta de alguno de los datos solicitados, en los enlaces superiores dispones opciones posibles para que puedas acceder a nuestra plataforma.</p>
-  </div>
-  <form class="col p-5 altura">
-    <div class="input-group mb-2">
-      <div class="input-group-prepend">
-          <span class="input-group-text" id="basic-addon1"><i class="fa fa-user"></i></span>
-      </div>
-      <input type="text" class="form-control" placeholder="Usuario" aria-label="Username" aria-describedby="basic-addon1">
-      </div>
-      <div class="input-group mb-2">
-      <div class="input-group-prepend">
-        <span class="input-group-text"><i class="fa fa-lock"></i></span>
-      </div>
-      <input type="password" class="form-control" placeholder="Contraseña" aria-label="" style="background-image: url(&quot;data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR4nGP6zwAAAgcBApocMXEAAAAASUVORK5CYII=&quot;);">
-      <div class="input-group-append">
-        <span class="input-group-text"><i class="fa fa-eye"></i></span>
-      </div>
-      </div>
-      <div>
-        <button type="button" class="btn btn-outline-primary btn-block btn-masqueplus">Iniciar Sesion</button>
-        <button type="button" class="btn btn-outline-danger btn-block"> <i class="fa fa-google-plus"></i> Ingresar con Google</button>
-      </div>
-  </form>
+<div class="row p-5 d-flex align-items-center h-100">
+    <div class="col separador-vertical altura">
+        <h1 class="texto-azul text-center">Usuarios <b>Registrados</b></h1>
+        <p class="justify p-3">Si aún no eres usuario o tienes dificultades para acceder por falta de alguno de los datos solicitados, dispones de opciones posibles para que puedas acceder a nuestra plataforma. Los enlaces los tienes debajo del formulario.</p>
+    </div>
+    <form ngNativeValidate #f="ngForm" (ngSubmit)="ingresar(f)" class="col p-5 altura">
+        <div class="input-group mb-2">
+            <div class="input-group-prepend">
+                <span class="input-group-text" id="basic-addon1"><i class="fa fa-user"></i></span>
+            </div>
+            <input [ngModel]="email" name="email" type="email" class="form-control" placeholder="Correo electrónico" aria-describedby="basic-addon1">
+        </div>
+        <div class="input-group mb-2">
+            <div class="input-group-prepend">
+                <span class="input-group-text"><i class="fa fa-lock"></i></span>
+            </div>
+            <input ngModel name="password" type="password" class="form-control" placeholder="Contraseña" aria-label="" style="background-image: url(&quot;data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR4nGP6zwAAAgcBApocMXEAAAAASUVORK5CYII=&quot;);">
+            <div class="input-group-append">
+                <span class="input-group-text"><i class="fa fa-eye"></i></span>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="checkbox checkbox-primary">
+                <input [(ngModel)]="recuerdame" name="recuerdame" type="checkbox" id="checkbox-signup">
+                <label for="checkbox-signup">Recuérdame</label>
+            </div>
+        </div>
+        <div>
+            <button type="submit" class="btn btn-outline-primary btn-block btn-masqueplus">Iniciar Sesion</button>
+            <button type="button" id="btnGoogle" class="btn btn-outline-danger btn-block"> <i class="fa fa-google-plus"></i> Ingresar con Google</button>
+        </div>
+        <div class="form-group m-b-0 mt-1">
+            <div class="col-sm-12">
+                ¿No tienes cuenta? <a href="#/registro" class="text-primary"><b>Regístrate</b></a>
+            </div>
+        </div>
+    </form>
 </div>
