--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -2,41 +2,34 @@
 <!-- Main wrapper - style you can find in pages.scss -->
 <!-- ============================================================== -->
 <div id="main-wrapper">
-  <app-header></app-header>
+    <app-header-admin></app-header-admin>
+    <app-sidebar></app-sidebar>
 
-  <app-sidebar></app-sidebar>
-
-  <!-- ============================================================== -->
-  <!-- Page wrapper  -->
-  <!-- ============================================================== -->
-  <div class="page-wrapper">
     <!-- ============================================================== -->
     <!-- Container fluid  -->
     <!-- ============================================================== -->
     <div class="container-fluid">
-      <app-breadcrumbs></app-breadcrumbs>
+        <app-breadcrumbs></app-breadcrumbs>
 
-      <!-- ============================================================== -->
-      <!-- Start Page Content -->
-      <!-- ============================================================== -->
+        <!-- ============================================================== -->
+        <!-- Start Page Content -->
+        <!-- ============================================================== -->
 
-      <router-outlet></router-outlet>
+        <router-outlet></router-outlet>
 
-      <!-- <div class="row">
-          <div class="col-12">
-              <div class="card">
-                  <div class="card-body">
-                      This is some text within a card block.
-                  </div>
-              </div>
-          </div>
-      </div> -->
-      <!-- ============================================================== -->
-      <!-- End Page Content -->
-      <!-- ============================================================== -->
+        <!-- <div class="row">
+        <div class="col-12">
+            <div class="card">
+                <div class="card-body">
+                    This is some text within a card block.
+                </div>
+            </div>
+        </div>
+    </div> -->
+        <!-- ============================================================== -->
+        <!-- End Page Content -->
+        <!-- ============================================================== -->
     </div>
-  </div>
-  <!-- ============================================================== -->
-  <!-- End Page wrapper  -->
-  <!-- ============================================================== -->
+
+    <app-footer></app-footer>
 </div>
