--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -991,8 +991,8 @@ File: scss
 /*Light colors*/
 /*Normal Color*/
 /*Extra Variable*/
-/*============================================================== 
- For all pages 
+/*==============================================================
+ For all pages
  ============================================================== */
 #main-wrapper {
   width: 100%;
@@ -1031,11 +1031,20 @@ File: scss
 /*******************
  Topbar
 *******************/
+.header-navbar.navbar-with-menu .navbar-container,
+.header-navbar .navbar-header {
+  background: rgba(0, 26, 57, 0.8); }
+
+.header-navbar .navbar-container ul.nav li a.nav-link-search, .header-navbar .navbar-container ul.nav li a.nav-link-expand,
+.header-navbar .navbar-container ul.nav li > a.nav-link {
+  color: #ffffff; }
+
 .fix-header .topbar {
   position: fixed;
   width: 100%;
   -webkit-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.05);
-  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.05); }
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.05);
+  top: 0; }
 
 .fix-header .page-wrapper {
   padding-top: 70px; }
