--- a/src/app/auth/registro/registro.component.css
+++ b/src/app/auth/registro/registro.component.css
@@ -1,10 +1,53 @@
 .btn-masqueplus {
-  color: #001a39;
-  border-color: #b3ff00;
+    color: #001a39;
+    border-color: #b3ff00;
 }
 
 .btn-masqueplus:hover {
-  color: #b3ff00 !important;
-  border-color: #001a39;
-  background-color: #001a39;
+    color: #b3ff00 !important;
+    border-color: #001a39;
+    background-color: #001a39;
+}
+
+.login-register {
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    height: 100%;
+    width: 100%;
+    padding: 10% 0;
+    position: fixed;
+}
+
+.login-box {
+    width: 400px;
+    margin: 0 auto;
+    overflow-y: scroll;
+    overflow-x: hidden;
+}
+
+.login-box .footer {
+    width: 100%;
+    left: 0px;
+    right: 0px;
+}
+
+.login-box .social {
+    display: block;
+    margin-bottom: 30px;
+}
+
+#recoverform {
+    display: none;
+}
+
+.login-sidebar {
+    padding: 0px;
+    margin-top: 0px;
+}
+
+.login-sidebar .login-box {
+    right: 0px;
+    position: absolute;
+    height: 100%;
 }
